[package]
name = "bim_sort"
version = "0.1.2"
edition = "2021"
description = "Consistently sort Microsoft Analysis Services bim files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = {version="1.0.147", features= ["derive"]}
serde_json = "1.0.89"
